syntax = "proto3";

package go.micro.service.order;

import "google/protobuf/timestamp.proto";

service Order {
  rpc GetOrderById(OrderId) returns (OrderInfo) {}
  rpc GetOrderPagedList(OrderPageRequest) returns (OrderPagedList) {}
  rpc CreateOrder(OrderInfo) returns (OrderId) {}
  rpc DeleteOrderById(OrderId) returns (Response) {}
  rpc UpdateOrderPayStatus(PayStatus) returns (Response) {}
  rpc UpdateOrderShipStatus(ShipStatus) returns (Response) {}
  rpc UpdateOrder(OrderInfo) returns (Response) {}
}

message OrderId {
  int64 order_id = 1;
}

message OrderInfo {
    int64 id = 1;
    int32 pay_status = 2;
    int32 ship_status = 3;
    double price = 4;
    repeated OrderDetail order_detail = 5;
}

message OrderDetail {
  int64 id = 1;
  int64 product_id = 2;
  int32 product_num = 3;
  int64 product_size_id = 4;
  int64 product_price = 5;
  int64 order_id = 6;
}

message OrderPageRequest {
  int64 page = 1;
  int64 page_size = 2;
  OrderPageConditions conditions = 3;
}

message OrderPageConditions {
  int32 pay_status = 1;
  int32 ship_status = 2;
  string OrderCode = 3;
  google.protobuf.Timestamp order_start_time = 4;
  google.protobuf.Timestamp order_end_time = 5;
}

message OrderPagedList {
  int64 total = 1;
  int64 page = 2;
  int64 page_size = 3;
  int64 pages = 4;
  repeated OrderInfo Data = 5;
}

message Response {
  string msg = 1;
}

message PayStatus {
  int64 order_id = 1;
  int32 pay_status = 2;
}

message ShipStatus {
  int64 order_id = 1;
  int32 ship_status = 2;
}

